--- a/recupero/templates/recupero/factura_form.html
+++ b/recupero/templates/recupero/factura_form.html
@@ -23,6 +23,7 @@
 
 {% endblock %}
 {% block js_footer %}
+    {{ block.super }}
     <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
     {{ form.media }}
 {% endblock js_footer %}
