--- a/calendario/templates/manage_turno_modal.html
+++ b/calendario/templates/manage_turno_modal.html
@@ -12,23 +12,23 @@ function cargarData(data){
     $("#paciente-doc").html(data.extendedProps.patient.numero_documento);
   }
   const ASIGNADO = "{{turno_states.ASIGNADO}}";
-  const CANCELADO_PACIENTE = "{{turno_states.CANCELADO_PACIENTE}}";
   const CANCELADO_ESTABLECIMIENTO = "{{turno_states.CANCELADO_ESTABLECIMIENTO}}";
+  const ATENDIDO = "{{turno_states.ATENDIDO}}";
   $("#title").html(data.title);
   $("#start").html(formatDatetime(data.start));
   $("#state").html(states[data.extendedProps.status].replace(/\_/g, ' '));
+  $("#btnCancelar").prop('disabled','');
+  $("#btnCancelar").attr('class','btn btn-danger');
   if (data.extendedProps.status == ASIGNADO){
     /*Solo se podra confirmar el turno cuando este ASIGNADO
       y el paciente llegue */
     $("#btnConfirmar").prop('disabled','');
     $("#btnConfirmar").attr('class','btn btn-primary');
-    $("#btnCancelar").prop('disabled','');
-    $("#btnCancelar").attr('class','btn btn-danger');
   }
   else{
     $("#btnConfirmar").prop('disabled','disabled');
     $("#btnConfirmar").attr('class','btn btn-dark');
-    if (data.extendedProps.status == CANCELADO_ESTABLECIMIENTO){
+    if ((data.extendedProps.status == CANCELADO_ESTABLECIMIENTO)||(data.extendedProps.status == ATENDIDO)){
         $("#btnCancelar").prop('disabled','disabled');
         $("#btnCancelar").attr('class','btn btn-dark');
     }
