--- a/recupero/templates/recupero/factura_list.html
+++ b/recupero/templates/recupero/factura_list.html
@@ -29,6 +29,8 @@
     <td scope="row">{{ cs.consulta.codigo_cie_principal }}</td>
     <td scope="row">
         <a role="button" class="btn btn-warning btn-sm active" 
+            href="{% url 'recupero.anexo2' factura_id=cs.id %}">Factura</a>
+        <a role="button" class="btn btn-warning btn-sm active" 
             href="{% url 'recupero.factura.detail' pk=cs.id %}">Detalles</a>
         {% if perms.recupero.change_factura %}
         <a role="button" class="btn btn-warning btn-sm active" 
