arreglo de css para el modal

--- a/calendario/templates/manage_turno_modal.html
+++ b/calendario/templates/manage_turno_modal.html
@@ -103,10 +103,12 @@ function crearSobreturno(){
       </div>
       <input hidden id="idTurno">
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" onclick="crearSobreturno()">Crear Sobreturno</button>
-        <button type="button" class="btn btn-danger" onclick="cancelarTurno()">Cancelar Turno</button>
-        <button type="button" class="btn btn-primary" id='btnConfirmar'
+        <div class="container" >
+        <button type="button" class="btn btn-primary espacio-margin"  onclick="crearSobreturno()">Crear Sobreturno</button>
+        <button type="button" class="btn btn-danger espacio-margin"  onclick="cancelarTurno()">Cancelar Turno</button>
+        <button type="button" class="btn btn-primary espacio-margin"  id='btnConfirmar'
           onclick="confirmarTurno()">Confirmar</button>
+        </div>
       </div>
     </div>
   </div>
