Fix de paginación en listados del sistema

--- a/profesionales/templates/profesionales/profesional_list.html
+++ b/profesionales/templates/profesionales/profesional_list.html
@@ -30,7 +30,6 @@
     </tbody>
 </table>
 
-{% include 'admin_paginate.html' %}
+{% include 'admin_paginate.html' with search_text=search_txt %}
 
 {% endblock %}
-
