--- a/recupero/templates/recupero/tipoprestacion_list.html
+++ b/recupero/templates/recupero/tipoprestacion_list.html
@@ -34,7 +34,6 @@
     </tbody>
 </table>
 
-{% include 'admin_paginate.html' %}
+{% include 'admin_paginate.html' with search_text=search_txt %}
 
 {% endblock %}
-
