--- a/ggg/templates/base_admin.html
+++ b/ggg/templates/base_admin.html
@@ -19,6 +19,7 @@
 
   <!-- Our Custom CSS -->
   <link rel="stylesheet" href="{% static 'css/tableros.css' %}">
+  <link rel="stylesheet" href="{% static 'css/evolucion.css' %}">
 
   <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
