--- a/pacientes/templates/pacientes/carpetafamiliar_form.html
+++ b/pacientes/templates/pacientes/carpetafamiliar_form.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <h2>{{subtitle}}</h2>
-    <a role="button" class="btn btn-warning btn-sm active" href="{% url 'calendario.gestion_turno' %}">Volver</a>
+    <a role="button" class="btn btn-warning btn-sm active" href="{% url 'calendario.agendar' %}">Volver</a>
     <form method="post" novalidate>
     {% csrf_token %}
         {{ form|crispy}}
