--- a/recupero/templates/recupero/factura_list.html
+++ b/recupero/templates/recupero/factura_list.html
@@ -4,42 +4,48 @@
 
 <table class="table">
     <thead>
-    <tr>
-        <th scope="col">Factura</th>
-        <th scope="col">Estado</th>
-        <th scope="col">Fecha</th>
-        <th scope="col">Obra social</th>
-        <th scope="col">Centro de salud</th>
-        <th scope="col">Profesional</th>
-        <th scope="col">Especialidad</th>
-        <th scope="col">CIE10 principal</th>
-        <th scope="col">Acciones</th>
-    </tr>
+        <tr>
+            <th scope="col">Estado</th>
+            <th scope="col">Fecha</th>
+            <th scope="col">Obra social</th>
+            <th scope="col">Centro de salud</th>
+            <th scope="col">Especialidad</th>
+            <th scope="col">Acciones</th>
+        </tr>
     </thead>
     <tbody>
-    {% for cs in object_list %}
-<tr>
-    <th scope="row">{{ cs.id }}</th>
-    <td scope="row">{{ cs.get_estado_display }}</td>
-    <th scope="row">{{ cs.created|date:"Y/m/d H:i" }}</th>
-    <td scope="row">{{ cs.obra_social|default_if_none:"Sin definir" }}</td>
-    <td scope="row">{{ cs.consulta.centro_de_salud }}</td>
-    <td scope="row">{{ cs.consulta.profesional }}</td>
-    <td scope="row">{{ cs.consulta.especialidad }}</td>
-    <td scope="row">{{ cs.consulta.codigo_cie_principal }}</td>
-    <td scope="row">
-        <a role="button" class="btn btn-warning btn-sm active" 
-            href="{% url 'recupero.anexo2' factura_id=cs.id %}">Factura</a>
-        <a role="button" class="btn btn-warning btn-sm active" 
-            href="{% url 'recupero.factura.detail' pk=cs.id %}">Detalles</a>
-        {% if perms.recupero.change_factura %}
-        <a role="button" class="btn btn-warning btn-sm active" 
-            href="{% url 'recupero.factura.edit' pk=cs.id %}">Editar</a>
-        {% endif %}
-    </td>
-</tr>
+        {% for cs in object_list %}
+        <tr>
+            <td scope="row">{{ cs.get_estado_display }}</td>
+            <td scope="row">{{ cs.created|date:"Y/m/d" }}</td>
+            <td scope="row">{{ cs.obra_social|default_if_none:"Sin definir" }}</td>
+            <td scope="row">{{ cs.consulta.centro_de_salud }}</td>
+            <td scope="row">{{ cs.consulta.especialidad }}</td>
+            <td scope="row">
+                <a role="button" class="btn btn-warning btn-sm active"
+                    href="{% url 'recupero.anexo2' factura_id=cs.id %}">Factura</a>
+                <a role="button" class="btn btn-warning btn-sm active" data-target="#detalle_factura_{{ cs.id }}"
+                    data-toggle="collapse" aria-expanded="false">Detalles</a>
+                {% if perms.recupero.change_factura %}
+                <a role="button" class="btn btn-warning btn-sm active"
+                    href="{% url 'recupero.factura.edit' pk=cs.id %}">Editar</a>
+                {% endif %}
+            </td>
+        </tr>
+        <tr>
+            <td class="p-0" colspan="6">
+                <div id="detalle_factura_{{ cs.id }}" class="collapse">
+                    <p>Nro de factura: {{ cs.id }} </p>
+                    <p>Profesional: {{ cs.consulta.profesional }} </p>
+                    <p>CIE10 Principal: {{ cs.consulta.codigo_cie_principal }}</p>
+                    <p>Total factura: $ 123</p>
+                </div>
+            </td>
+        </tr>
         {% empty %}
-        <td>Sin datos</td><td></td><td></td>
+        <td>Sin datos</td>
+        <td></td>
+        <td></td>
         {% endfor %}
     </tbody>
 </table>
