agregado de componente filtro

--- a/ggg/templates/admin_search_bar.html
+++ b/ggg/templates/admin_search_bar.html
@@ -1,6 +1,15 @@
 <form class="navbar-form" method="get">
-    <div class="form-inline">
-       <input name="search" type="text" placeholder="buscar" class="form-control mr-sm-6" value="{{ search_txt }}">
-       <button type="submit" class="btn btn-success">Buscar</button>
+    <div class="form-inline form-right-flex">
+        {% if use_filter_bar %}
+            <input name="search" type="text" placeholder="buscar" class="form-control mr-sm-3 " value="{{ search_txt }}">
+            {% include 'admin_filter_bar.html' %}
+
+                <button type="submit" class=" btn btn-success">Buscar</button>
+
+        {% else %}
+            <input name="search" type="text" placeholder="buscar" class="form-control mr-sm-6 " value="{{ search_txt }}">
+            <button type="submit" class="btn btn-success">Buscar</button>
+        {% endif %}
+
     </div>
 </form>
