--- a/ggg/templates/admin_add_button.html
+++ b/ggg/templates/admin_add_button.html
@@ -1,3 +1,9 @@
-<a role="button" 
-    class="btn btn-warning btn-me active" 
-    href="{% url add_url %}">Agregar</a>
+{% if use_filter_bar %}
+    <div class="form-group col-md-1 admin-add-bar">
+{% else %}
+    <div class="form-group col-md-1 ">
+{% endif %}
+        <a role="button"
+        class="btn btn-warning btn-me active"
+        href="{% url add_url %}">Agregar</a>
+    </div>
