--- a/ggg/templates/base_admin.html
+++ b/ggg/templates/base_admin.html
@@ -20,7 +20,7 @@
   <!-- Our Custom CSS -->
   <link rel="stylesheet" href="{% static 'css/tableros.css' %}">
   <link rel="stylesheet" href="{% static 'css/evolucion.css' %}">
-
+  <link rel="stylesheet" href="{% static 'css/filter.css' %}">
   <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
