--- a/ggg/templates/admin_filter_bar.html
+++ b/ggg/templates/admin_filter_bar.html
@@ -1,11 +1,18 @@
-{% for fil,nombre,queryset in filters %}
+{% for fil,nombre,queryset,default in filters %}
 <div class="admin-filter-bar">
         <label for="{{ fil }}">{{ nombre }}</label>
         <select id="{{ fil }}" class="form-control" name="{{ fil }}">
-            <option selected>---</option>
+        {% if default is None %}
+            <option selected><p>---</p></option>
                 {% for q in queryset %}
                 <option value="{{ q.identificador }}">{{ q.valor }}</option>
             {% endfor %}
+        {% else %}
+            <option >---</option>
+            {% for q in queryset %}
+                <option  {% if q.identificador|slugify == default %}selected {% endif %} value="{{ q.identificador }}">{{ q.valor}}</option>
+            {% endfor %}
+        {% endif %}
         </select>
 </div>
 {% endfor %}
