--- a/recupero/templates/recupero/factura_list.html
+++ b/recupero/templates/recupero/factura_list.html
@@ -44,6 +44,6 @@
     </tbody>
 </table>
 
-{% include 'admin_paginate.html' with search_text=search_txt %}
+{% include 'admin_paginate.html' with search_text=search_txt filter_txt=filter_txt%}
 
 {% endblock %}
