--- a/ggg/templates/admin_add_button.html
+++ b/ggg/templates/admin_add_button.html
@@ -1,8 +1,4 @@
-{% if use_filter_bar %}
-    <div class="form-group col-md-1 admin-add-bar">
-{% else %}
-    <div class="form-group col-md-1 ">
-{% endif %}
+    <div class="form-group col-md-1 {% if use_filter_bar %}admin-add-bar{% endif %}">
         <a role="button"
         class="btn btn-warning btn-me active"
         href="{% url add_url %}">Agregar</a>
