--- a/centros_de_salud/templates/centros_de_salud/profesionalesenservicio_list.html
+++ b/centros_de_salud/templates/centros_de_salud/profesionalesenservicio_list.html
@@ -32,6 +32,6 @@
     </tbody>
 </table>
 
-{% include 'admin_paginate.html' with search_text=search_txt %}
+{% include 'admin_paginate.html' with search_text=search_txt filter_txt=filter_txt %}
 
 {% endblock %}
