--- a/recupero/templates/recupero/factura_create_form.html
+++ b/recupero/templates/recupero/factura_create_form.html
@@ -4,22 +4,52 @@
 
 {% block content %}
     <h2>Crear factura {{ object.id }}</h2>
-    
-<p>FORMULARIO EN CONSTRUCCION</p>
 
     <a role="button" 
         class="btn btn-warning btn-sm active" 
         href="{% url 'recupero.facturas' %}">Volver a la lista</a>
-    <form method="post" novalidate>
-    {% csrf_token %}
-        {{ form|crispy}}
-        <button type="submit" class="btn btn-success">Crear Factura</button>
-    </form>
-    <div class="line"></div>
 
+    <form method="post" novalidate>
+    <div class="col-12 col-md-12 " style="display: flex;" >
+        <div class="col-6 col-md-6">
+        {% csrf_token %}
+            {{ form|crispy}}
+        </div>
+        <div class="col-6 col-md-6" style=" width: 50%;
+  height: 600px;
+  overflow: scroll;padding-left: 15px">
+
+         {% with prestaciones.prefix|slugify as p %}
+           <H4>Prestaciones</H4>
+           <div class="card-body">
+                {% for form in prestaciones %}
+                    <div class="{{ p }}-form">
+                        {{ form|crispy }}
+                    </div>
+                {% endfor %}
+                {{ prestaciones.management_form }}
+            </div>
+         {% endwith %}
+        </div>
+    </div>
+      <button type="submit" class="btn btn-success">Crear Factura</button>
+    </form>
 {% endblock %}
 {% block js_footer %}
     {{ block.super }}
-    <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.formset.js' %}" type="text/javascript"> </script>
     {{ form.media }}
+    <script type="text/javascript">
+        $( document ).ready(function() {
+           {% with prestaciones.prefix|slugify as p %}
+              $('.{{ p }}-form').formset({
+                      prefix: '{{ prestaciones.prefix|slugify }}',
+                      addText: 'Agregar otro',
+                      deleteText: 'Eliminar',
+                      deleteCssClass: 'btn btn-sm btn-danger',
+                      addCssClass: 'btn btn-sm btn-success'
+                  });
+           {% endwith %}
+        })
+    </script>
 {% endblock js_footer %}
